crates/ruff_python_parser/tests/snapshots/invalid_syntax@ann_assign_stmt_invalid_target.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/ann_assign_stmt_invalid_target.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(
            72,
        ),
        range: 0..170,
        body: [
            AnnAssign(
                StmtAnnAssign {
                    node_index: NodeIndex(
                        6,
                    ),
                    range: 0..18,
                    target: StringLiteral(
                        ExprStringLiteral {
                            node_index: NodeIndex(
                                1,
                            ),
                            range: 0..5,
                            value: StringLiteralValue {
                                inner: Single(
                                    StringLiteral {
                                        range: 0..5,
                                        node_index: NodeIndex(
                                            0,
                                        ),
                                        value: "abc",
                                        flags: StringLiteralFlags {
                                            quote_style: Double,
                                            prefix: Empty,
                                            triple_quoted: false,
                                        },
                                    },
                                ),
                            },
                        },
                    ),
                    annotation: Name(
                        ExprName {
                            node_index: NodeIndex(
                                3,
                            ),
                            range: 7..10,
                            id: Name("str"),
                            ctx: Load,
                        },
                    ),
                    value: Some(
                        StringLiteral(
                            ExprStringLiteral {
                                node_index: NodeIndex(
                                    5,
                                ),
                                range: 13..18,
                                value: StringLiteralValue {
                                    inner: Single(
                                        StringLiteral {
                                            range: 13..18,
                                            node_index: NodeIndex(
                                                4,
                                            ),
                                            value: "def",
                                            flags: StringLiteralFlags {
                                                quote_style: Double,
                                                prefix: Empty,
                                                triple_quoted: false,
                                            },
                                        },
                                    ),
                                },
                            },
                        ),
                    ),
                    simple: false,
                },
            ),
            AnnAssign(
                StmtAnnAssign {
                    node_index: NodeIndex(
                        15,
                    ),
                    range: 19..37,
                    target: Call(
                        ExprCall {
                            node_index: NodeIndex(
                                10,
                            ),
                            range: 19..25,
                            func: Name(
                                ExprName {
                                    node_index: NodeIndex(
                                        8,
                                    ),
                                    range: 19..23,
                                    id: Name("call"),
                                    ctx: Load,
                                },
                            ),
                            arguments: Arguments {
                                range: 23..25,
                                node_index: NodeIndex(
                                    9,
                                ),
                                args: [],
                                keywords: [],
                            },
                        },
                    ),
                    annotation: Name(
                        ExprName {
                            node_index: NodeIndex(
                                12,
                            ),
                            range: 27..30,
                            id: Name("str"),
                            ctx: Load,
                        },
                    ),
                    value: Some(
                        StringLiteral(
                            ExprStringLiteral {
                                node_index: NodeIndex(
                                    14,
                                ),
                                range: 33..37,
                                value: StringLiteralValue {
                                    inner: Single(
                                        StringLiteral {
                                            range: 33..37,
                                            node_index: NodeIndex(
                                                13,
                                            ),
                                            value: "no",
                                            flags: StringLiteralFlags {
                                                quote_style: Double,
                                                prefix: Empty,
                                                triple_quoted: false,
                                            },
                                        },
                                    ),
                                },
                            },
                        ),
                    ),
                    simple: false,
                },
            ),
            AnnAssign(
                StmtAnnAssign {
                    node_index: NodeIndex(
                        24,
                    ),
                    range: 38..52,
                    target: Starred(
                        ExprStarred {
                            node_index: NodeIndex(
                                18,
                            ),
                            range: 38..40,
                            value: Name(
                                ExprName {
                                    node_index: NodeIndex(
                                        17,
                                    ),
                                    range: 39..40,
                                    id: Name("x"),
                                    ctx: Store,
                                },
                            ),
                            ctx: Store,
                        },
                    ),
                    annotation: Name(
                        ExprName {
                            node_index: NodeIndex(
                                20,
                            ),
                            range: 42..45,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                    value: Some(
                        Tuple(
                            ExprTuple {
                                node_index: NodeIndex(
                                    23,
                                ),
                                range: 48..52,
                                elts: [
                                    NumberLiteral(
                                        ExprNumberLiteral {
                                            node_index: NodeIndex(
                                                21,
                                            ),
                                            range: 48..49,
                                            value: Int(
                                                1,
                                            ),
                                        },
                                    ),
                                    NumberLiteral(
                                        ExprNumberLiteral {
                                            node_index: NodeIndex(
                                                22,
                                            ),
                                            range: 51..52,
                                            value: Int(
                                                2,
                                            ),
                                        },
                                    ),
                                ],
                                ctx: Load,
                                parenthesized: false,
                            },
                        ),
                    ),
                    simple: false,
                },
            ),
            AnnAssign(
                StmtAnnAssign {
                    node_index: NodeIndex(
                        31,
                    ),
                    range: 72..83,
                    target: Tuple(
                        ExprTuple {
                            node_index: NodeIndex(
                                27,
                            ),
                            range: 72..74,
                            elts: [
                                Name(
                                    ExprName {
                                        node_index: NodeIndex(
                                            26,
                                        ),
                                        range: 72..73,
                                        id: Name("x"),
                                        ctx: Store,
                                    },
                                ),
                            ],
                            ctx: Store,
                            parenthesized: false,
                        },
                    ),
                    annotation: Name(
                        ExprName {
                            node_index: NodeIndex(
                                29,
                            ),
                            range: 76..79,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                    value: Some(
                        NumberLiteral(
                            ExprNumberLiteral {
                                node_index: NodeIndex(
                                    30,
                                ),
                                range: 82..83,
                                value: Int(
                                    1,
                                ),
                            },
                        ),
                    ),
                    simple: false,
                },
            ),
            AnnAssign(
                StmtAnnAssign {
                    node_index: NodeIndex(
                        42,
                    ),
                    range: 84..100,
                    target: Tuple(
                        ExprTuple {
                            node_index: NodeIndex(
                                36,
                            ),
                            range: 84..88,
                            elts: [
                                Name(
                                    ExprName {
                                        node_index: NodeIndex(
                                            33,
                                        ),
                                        range: 84..85,
                                        id: Name("x"),
                                        ctx: Store,
                                    },
                                ),
                                Name(
                                    ExprName {
                                        node_index: NodeIndex(
                                            35,
                                        ),
                                        range: 87..88,
                                        id: Name("y"),
                                        ctx: Store,
                                    },
                                ),
                            ],
                            ctx: Store,
                            parenthesized: false,
                        },
                    ),
                    annotation: Name(
                        ExprName {
                            node_index: NodeIndex(
                                38,
                            ),
                            range: 90..93,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                    value: Some(
                        Tuple(
                            ExprTuple {
                                node_index: NodeIndex(
                                    41,
                                ),
                                range: 96..100,
                                elts: [
                                    NumberLiteral(
                                        ExprNumberLiteral {
                                            node_index: NodeIndex(
                                                39,
                                            ),
                                            range: 96..97,
                                            value: Int(
                                                1,
                                            ),
                                        },
                                    ),
                                    NumberLiteral(
                                        ExprNumberLiteral {
                                            node_index: NodeIndex(
                                                40,
                                            ),
                                            range: 99..100,
                                            value: Int(
                                                2,
                                            ),
                                        },
                                    ),
                                ],
                                ctx: Load,
                                parenthesized: false,
                            },
                        ),
                    ),
                    simple: false,
                },
            ),
            AnnAssign(
                StmtAnnAssign {
                    node_index: NodeIndex(
                        53,
                    ),
                    range: 101..119,
                    target: Tuple(
                        ExprTuple {
                            node_index: NodeIndex(
                                47,
                            ),
                            range: 101..107,
                            elts: [
                                Name(
                                    ExprName {
                                        node_index: NodeIndex(
                                            44,
                                        ),
                                        range: 102..103,
                                        id: Name("x"),
                                        ctx: Store,
                                    },
                                ),
                                Name(
                                    ExprName {
                                        node_index: NodeIndex(
                                            46,
                                        ),
                                        range: 105..106,
                                        id: Name("y"),
                                        ctx: Store,
                                    },
                                ),
                            ],
                            ctx: Store,
                            parenthesized: true,
                        },
                    ),
                    annotation: Name(
                        ExprName {
                            node_index: NodeIndex(
                                49,
                            ),
                            range: 109..112,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                    value: Some(
                        Tuple(
                            ExprTuple {
                                node_index: NodeIndex(
                                    52,
                                ),
                                range: 115..119,
                                elts: [
                                    NumberLiteral(
                                        ExprNumberLiteral {
                                            node_index: NodeIndex(
                                                50,
                                            ),
                                            range: 115..116,
                                            value: Int(
                                                1,
                                            ),
                                        },
                                    ),
                                    NumberLiteral(
                                        ExprNumberLiteral {
                                            node_index: NodeIndex(
                                                51,
                                            ),
                                            range: 118..119,
                                            value: Int(
                                                2,
                                            ),
                                        },
                                    ),
                                ],
                                ctx: Load,
                                parenthesized: false,
                            },
                        ),
                    ),
                    simple: false,
                },
            ),
            AnnAssign(
                StmtAnnAssign {
                    node_index: NodeIndex(
                        60,
                    ),
                    range: 138..150,
                    target: List(
                        ExprList {
                            node_index: NodeIndex(
                                56,
                            ),
                            range: 138..141,
                            elts: [
                                Name(
                                    ExprName {
                                        node_index: NodeIndex(
                                            55,
                                        ),
                                        range: 139..140,
                                        id: Name("x"),
                                        ctx: Store,
                                    },
                                ),
                            ],
                            ctx: Store,
                        },
                    ),
                    annotation: Name(
                        ExprName {
                            node_index: NodeIndex(
                                58,
                            ),
                            range: 143..146,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                    value: Some(
                        NumberLiteral(
                            ExprNumberLiteral {
                                node_index: NodeIndex(
                                    59,
                                ),
                                range: 149..150,
                                value: Int(
                                    1,
                                ),
                            },
                        ),
                    ),
                    simple: false,
                },
            ),
            AnnAssign(
                StmtAnnAssign {
                    node_index: NodeIndex(
                        71,
                    ),
                    range: 151..169,
                    target: List(
                        ExprList {
                            node_index: NodeIndex(
                                65,
                            ),
                            range: 151..157,
                            elts: [
                                Name(
                                    ExprName {
                                        node_index: NodeIndex(
                                            62,
                                        ),
                                        range: 152..153,
                                        id: Name("x"),
                                        ctx: Store,
                                    },
                                ),
                                Name(
                                    ExprName {
                                        node_index: NodeIndex(
                                            64,
                                        ),
                                        range: 155..156,
                                        id: Name("y"),
                                        ctx: Store,
                                    },
                                ),
                            ],
                            ctx: Store,
                        },
                    ),
                    annotation: Name(
                        ExprName {
                            node_index: NodeIndex(
                                67,
                            ),
                            range: 159..162,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                    value: Some(
                        Tuple(
                            ExprTuple {
                                node_index: NodeIndex(
                                    70,
                                ),
                                range: 165..169,
                                elts: [
                                    NumberLiteral(
                                        ExprNumberLiteral {
                                            node_index: NodeIndex(
                                                68,
                                            ),
                                            range: 165..166,
                                            value: Int(
                                                1,
                                            ),
                                        },
                                    ),
                                    NumberLiteral(
                                        ExprNumberLiteral {
                                            node_index: NodeIndex(
                                                69,
                                            ),
                                            range: 168..169,
                                            value: Int(
                                                2,
                                            ),
                                        },
                                    ),
                                ],
                                ctx: Load,
                                parenthesized: false,
                            },
                        ),
                    ),
                    simple: false,
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | "abc": str = "def"
  | ^^^^^ Syntax Error: Invalid annotated assignment target
2 | call(): str = "no"
3 | *x: int = 1, 2
  |


  |
1 | "abc": str = "def"
2 | call(): str = "no"
  | ^^^^^^ Syntax Error: Invalid annotated assignment target
3 | *x: int = 1, 2
4 | # Tuple assignment
  |


  |
1 | "abc": str = "def"
2 | call(): str = "no"
3 | *x: int = 1, 2
  | ^^ Syntax Error: Invalid annotated assignment target
4 | # Tuple assignment
5 | x,: int = 1
  |


  |
3 | *x: int = 1, 2
4 | # Tuple assignment
5 | x,: int = 1
  | ^^ Syntax Error: Only single target (not tuple) can be annotated
6 | x, y: int = 1, 2
7 | (x, y): int = 1, 2
  |


  |
4 | # Tuple assignment
5 | x,: int = 1
6 | x, y: int = 1, 2
  | ^^^^ Syntax Error: Only single target (not tuple) can be annotated
7 | (x, y): int = 1, 2
8 | # List assignment
  |


  |
5 | x,: int = 1
6 | x, y: int = 1, 2
7 | (x, y): int = 1, 2
  | ^^^^^^ Syntax Error: Only single target (not tuple) can be annotated
8 | # List assignment
9 | [x]: int = 1
  |


   |
 7 | (x, y): int = 1, 2
 8 | # List assignment
 9 | [x]: int = 1
   | ^^^ Syntax Error: Only single target (not list) can be annotated
10 | [x, y]: int = 1, 2
   |


   |
 8 | # List assignment
 9 | [x]: int = 1
10 | [x, y]: int = 1, 2
   | ^^^^^^ Syntax Error: Only single target (not list) can be annotated
   |
